--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100vh;
+  background-color: #28abb9;
+  font-family: 'Poppins', sans-serif;
+
 }
 
-.App-link {
-  color: #61dafb;
+button{
+  background-color: #2d6187;
+  border-radius: 6px;
+  padding-left: 20px;
+  padding-right: 20px;
+  font-size: 16px;
 }
 
 @keyframes App-logo-spin {
@@ -34,5 +24,50 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+
+.info{
+  position: absolute;
+  left: 50%;
+  top: 0;
+  transform: translate(-50%, 0);
+}
+
+.info2{
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #4873AA;
+}
+
+img{
+  margin: auto;
+  width: 200px;
+  height: 200px;
+  margin-top: 100px;
+}
+
+.ScoreTable{
+  position: absolute;
+  left: 10px;
+  top: 10px;
+}
+
+.ScoreTable h4{
+  margin: 0;
+}
+
+@media only screen and (max-width: 768px) {
+  .info{
+    font-size: 14px;
+    top: 10px;
+  }
+  .ScoreTable{
+    font-size: 13px;
   }
 }
